crates/shipper-core/src/ops/git/snapshots/shipper_core__ops__git__context__edge_case_snapshots__clean_result_err_not_git.snap
---
source: crates/shipper-core/src/ops/git/context.rs
expression: result
---
Err(
    "git status failed: fatal: not a git repository",
)
