crates/shipper-core/src/ops/git/snapshots/shipper_core__ops__git__context__edge_case_snapshots__clean_result_err_uncommitted.snap
---
source: crates/shipper-core/src/ops/git/context.rs
expression: result
---
Err(
    "git working tree has uncommitted changes. Use --allow-dirty to bypass.",
)
