crates/shipper-core/src/ops/git/snapshots/shipper_core__ops__git__context__edge_case_snapshots__context_dirty_detached.snap
---
source: crates/shipper-core/src/ops/git/context.rs
expression: ctx
---
GitContext {
    commit: Some(
        "ff00ff00ff00ff00ff00ff00ff00ff00ff00ff00",
    ),
    branch: None,
    tag: None,
    dirty: Some(
        true,
    ),
}
