crates/shipper-core/src/ops/git/snapshots/shipper_core__ops__git__context__edge_case_snapshots__context_feature_branch_clean.snap
---
source: crates/shipper-core/src/ops/git/context.rs
expression: ctx
---
GitContext {
    commit: Some(
        "aabbccddaabbccddaabbccddaabbccddaabbccdd",
    ),
    branch: Some(
        "feature/add-logging",
    ),
    tag: None,
    dirty: Some(
        false,
    ),
}
