crates/shipper-core/src/ops/git/snapshots/shipper_core__ops__git__context__edge_case_snapshots__context_no_commit_no_branch.snap
---
source: crates/shipper-core/src/ops/git/context.rs
expression: ctx
---
GitContext {
    commit: None,
    branch: None,
    tag: None,
    dirty: None,
}
