crates/shipper-core/src/ops/git/snapshots/shipper_core__ops__git__context__edge_case_snapshots__context_tagged_detached.snap
---
source: crates/shipper-git/src/lib.rs
expression: ctx
---
GitContext {
    commit: Some(
        "deadbeefdeadbeefdeadbeefdeadbeefdeadbeef",
    ),
    branch: None,
    tag: Some(
        "v1.0.0",
    ),
    dirty: Some(
        false,
    ),
}
