crates/shipper-core/src/ops/git/snapshots/shipper_core__ops__git__context__edge_case_snapshots__is_dirty_all_variants.snap
---
source: crates/shipper-core/src/ops/git/context.rs
expression: variants
---
[
    DirtyVariant {
        input: None,
        result: true,
    },
    DirtyVariant {
        input: Some(
            true,
        ),
        result: true,
    },
    DirtyVariant {
        input: Some(
            false,
        ),
        result: false,
    },
]
