crates/shipper-core/src/ops/git/snapshots/shipper_core__ops__git__context__edge_case_snapshots__porcelain_parsed_files.snap
---
source: crates/shipper-core/src/ops/git/context.rs
expression: files
---
[
    "untracked.txt",
    "odified.txt",
    "staged_new.txt",
    "deleted.txt",
    "both_staged_and_modified.txt",
    "renamed.txt -> new_name.txt",
]
