crates/shipper-core/src/ops/git/snapshots/shipper_core__ops__git__context__edge_case_snapshots__porcelain_renamed_and_copied.snap
---
source: crates/shipper-core/src/ops/git/context.rs
expression: files
---
[
    "old.txt -> new.txt",
    "original.txt -> copy.txt",
    "brand_new.txt",
]
